--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --branco: #FFF;
     --azul-claro: #DFE3E5;
     --vermelho-forte: #B72E2E;
@@ -19,26 +19,34 @@
     --montserrat: 'Montserrat', sans-serif;
 }
 
-
-body{
+body {
     font-family: 'Open Sans', sans-serif;
 }
 
-.container{
+.container {
     padding-right: 6%;
     padding-left: 6%;
 }
 
-
-.botao{
+.botao {
     text-align: center;
-    display: block;
-    width: 100%;
 
+    display: block;
+
+    width: 100%;
     max-width: 350px;
+
     box-sizing: border-box;
 
     padding: 1rem 2rem;
+
     border: 1px solid var(--branco);
     border-radius: 5px;
+}
+
+@media screen and (min-width: 1024px) {
+    .container {
+        padding-left: calc((100% - 940px)/2);
+        padding-right: calc((100% - 940px)/2);
+    }
 }
